# cs_wpf_dotnet_cmake_json_table

./: .gitignore  README
wpf/: App.xaml  App.xaml.cs  CMakeLists.txt  wpf.csproj  wpf.sln
wpf/Models/: ModelHand.cs  ModelJson.cs  ModelLanguage.cs  ModelTable.cs
wpf/Resources/: ResGen.exe.lnk  lang_en_us.resx  lang_ru_ru.resx
wpf/View/: MainWindow.xaml  MainWindow.xaml.cs
wpf/ViewModel/: BaseViewModel.cs  DelegateCommand.cs  MainViewModel.cs
